--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  fonts:
+    - family: Rubik
+      fonts:
+       - asset: fonts/Rubik-BlackItalic.ttf
+         style: italic
+       - asset: fonts/Rubik-Black.ttf
+         weight: 500
+       - asset: fonts/Rubik-Light.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
