--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   app_settings: 4.0.1+1
+  flutter_email_sender: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
