--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   app_settings: 4.0.1+1
   flutter_email_sender: ^3.0.1
   simple_animations: ^2.2.1
+  firebase_auth: ^0.16.1
+  google_sign_in: ^4.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
